--- a/config/appconfig.json
+++ b/config/appconfig.json
@@ -9,17 +9,23 @@
     "database": {
       "username": "mapuser",
       "password": "password",
-      "database": "lisa_data2",
+      "database": "lisadb",
       "host": "127.0.0.1:3306"
     },
     "server": {
       "port": "8080",
       "host": "127.0.0.1"
     },
+    "messagequeue":{
+      "consumerlookupaddress":"127.0.0.1:4161",
+      "produceraddress":"127.0.0.1:4150"
+
+    },
     "slack": {
       "slackApi": {
-        "masterkey": "",
-        "apikey": ""
+        "masterslackToken": "xoxp-79649268789-79642431094-173403093394-bb5e3455ebcde6139ac923efe1af642d",
+        "botslackToken": "xoxb-79835729619-GSS3wTWee47CoFg0vmcZvj1g",
+        "lisaslacktoken":"xoxb-196892958678-67yfvRMtdpACE1o8aVEoFLwo"
       },
       "admin": [
         "",
